revision 1.92 date: 2013/12/02 03:13:14;  author: djm;  state: Exp;  lines: +2 -2; correct bzero of chacha20+poly1305 key context. bz#2177 from Loganaden Velvindron @ AfriNIC